Reliability, bug fixes, and code quality improvements (v2.5.0)
Bridge: retry connection 3x on init, auto-reconnect on send/receive failure,
increase socket timeout 5ms to 50ms, fix legacy labels.

Stuck detection: warn at 18K frames (~5min) per strategy, reset at 36K frames;
warn if walk position unchanged for 600+ frames.

Bug fixes: fix and/or precedence in Nidoran stat check, add Menu.hasTextbox()
guard for Yellow skill completion, Thrash battle_turns==0 check.

Code quality: extract magic numbers to util/constants.lua, move config to
config.lua with pcall fallback, consolidate dead Bridge code to no-ops,
remove hardcoded STREAMING_MODE override, update .gitignore.

Yellow TODOs: add ether to shopBuffs check, validate carbos inventory,
move canCatch() to top of catchNidoran, add Eevee detection in rivalSandAttack.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@ wiki/*/*.txt
 *.iml
 .idea/modules.xml
 *.xml
+
+# AI tooling
+CLAUDE.md
+.claude/
+
+# Per-machine config
+config.lua
+
+# Emulator save data
+BizHawk-1.11.6/Gameboy/SaveRAM/
+
+# LiveSplit local config
+LiveSplit_1.6.9/settings.cfg
+livesplit things/
+
+# Python cache (orphaned)
+.pytest_cache/
