--- a/LiveSplit_1.6.9/settings.cfg
+++ b/LiveSplit_1.6.9/settings.cfg
@@ -16,10 +16,10 @@
   <RaceViewer>SpeedRunsLive</RaceViewer>
   <AgreedToSRLRules>False</AgreedToSRLRules>
   <RecentSplits>
-    <SplitsFile gameName="Pokémon Red/Blue" categoryName="Any% Glitchless Bot%" lastTimingMethod="GameTime">C:\Users\rjrhy\Desktop\Pokebot\PokeBot-master\PokeBot-master\livesplit things\Pokemon red Bot%.lss</SplitsFile>
+    <SplitsFile gameName="Pokémon Red/Blue" categoryName="Any% Glitchless Bot%" lastTimingMethod="GameTime">C:\Users\neoga\Desktop\GitHub\PokeBotBad\livesplit things\Pokemon red Bot%.lss</SplitsFile>
   </RecentSplits>
   <RecentLayouts>
-    <LayoutPath>C:\Users\rjrhy\Desktop\Pokebot\PokeBot-master\PokeBot-master\livesplit things\lol.lsl</LayoutPath>
+    <LayoutPath>C:\Users\neoga\Desktop\GitHub\PokeBotBad\livesplit things\lol.lsl</LayoutPath>
   </RecentLayouts>
   <LastComparison>Best Segments</LastComparison>
   <SimpleSumOfBest>False</SimpleSumOfBest>
