Redesign paint overlay with analytics dashboard and reset stats fresh
Replace debug overlay (Nido stats, HP, party, repel, encounters) with
a compact analytics dashboard showing elapsed time, map position, PB,
win rate, and all-time reset reason breakdown.

Add util/analytics.lua module: parses historical reset/victory logs on
startup, tracks live resets/victories with classified reason categories
(DVs, Time, RNG, Combat, Encounters, Other), detects PBs, and prints
periodic summaries. Hooked into Strategies.hardReset() for live tracking.

Remove Paint.wildEncounters() and Paint.reset() along with their callers
in control.lua and main.lua. Drop unused requires (Combat, Pokemon, Memory
from paint; Paint from control).

--- a/BizHawk-1.11.6/config.ini
+++ b/BizHawk-1.11.6/config.ini
@@ -6,7 +6,7 @@
     ".img": ""
   },
   "UseRecentForROMs": false,
-  "LastRomPath": "C:\\Users\\rjrhy\\Desktop\\Pokebot",
+  "LastRomPath": "C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad",
   "PathEntries": {
     "Paths": [
       {
@@ -1107,6 +1107,8 @@
   "DispUserFilterPath": "",
   "RecentRoms": {
     "recentlist": [
+      "*OpenRom*C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\pokemon_red.gb",
+      "*OpenRom*C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\BizHawk-1.11.6\\Gameboy\\pokemon_red.gb",
       "*OpenRom*C:\\Users\\rjrhy\\Desktop\\Pokebot\\Pokemon - Red Version (USA, Europe).gb",
       "*OpenRom*C:\\Users\\rjrhy\\Desktop\\Pokebot\\1986 - Pokemon Emerald (U)(TrashMan).gba",
       "*OpenRom*C:\\Users\\rjrhy\\Desktop\\Pokebot\\Pokemon - Crystal Version (USA, Europe).gbc"
@@ -1125,8 +1127,8 @@
   "SaveWindowPosition": true,
   "StartPaused": false,
   "StartFullscreen": false,
-  "MainWndx": 283,
-  "MainWndy": 35,
+  "MainWndx": -8,
+  "MainWndy": -8,
   "MainWidth": -1,
   "MainHeight": -1,
   "RunInBackground": true,
@@ -1167,7 +1169,7 @@
   "N64UseCircularAnalogConstraint": true,
   "FrameProgressDelayMs": 500,
   "FrameSkip": 4,
-  "SpeedPercent": 350,
+  "SpeedPercent": 600,
   "SpeedPercentAlternate": 400,
   "ClockThrottle": true,
   "AutoMinimizeSkipping": true,
@@ -1261,6 +1263,7 @@
   "LogWindowHeight": -1,
   "RecentLua": {
     "recentlist": [
+      "C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\main.lua",
       "C:\\Users\\rjrhy\\Desktop\\Pokebot\\Github work\\PokeBotBad\\main.lua",
       "C:\\Users\\rjrhy\\Desktop\\Pokebot\\Github work\\PokeBot\\main.lua",
       "C:\\Users\\rjrhy\\Desktop\\Pokemon - Red Version (USA, Europe)2.lua",
@@ -1354,9 +1357,9 @@
   },
   "CommonToolSettings": {
     "BizHawk.Client.EmuHawk.LuaConsole": {
-      "_wndx": 1320,
-      "_wndy": 148,
-      "Width": 600,
+      "_wndx": 225,
+      "_wndy": 150,
+      "Width": 1189,
       "Height": 706,
       "SaveWindowPosition": true,
       "TopMost": false,
