--- a/LiveSplit_1.6.9/settings.cfg
+++ b/LiveSplit_1.6.9/settings.cfg
@@ -32,5 +32,5 @@
     <Generator name="None">False</Generator>
   </ComparisonGeneratorStates>
   <ActiveAutoSplitters />
-  <TimerDrift><![CDATA[g5aCpwMA8D8=]]></TimerDrift>
+  <TimerDrift><![CDATA[CcyAtAkA8D8=]]></TimerDrift>
 </Settings>
