Optimize E4 route toward WR strats and add route analysis
Rebalance shop buys to match WR route: 6 repels at Vermilion (was 3),
11 X Accuracy / 6 X Speed / 3 X Special at Celadon (was 10/4/4).
Rewrite Agatha to use X Special with forced EQ on ghosts and Ice Beam
on Golbat instead of X Accuracy + X Speed + Thrash. Simplify Champion
to always X Special (removes conditional speed/special branching).

Add WR route comparison doc covering priority optimizations like Battle
Style SET, Poke Doll ghost skip, and Rock Slide for Channelers.

--- a/BizHawk-1.11.6/config.ini
+++ b/BizHawk-1.11.6/config.ini
@@ -6,7 +6,7 @@
     ".img": ""
   },
   "UseRecentForROMs": false,
-  "LastRomPath": "C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad",
+  "LastRomPath": "C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\BizHawk-1.11.6\\Gameboy",
   "PathEntries": {
     "Paths": [
       {
@@ -1107,8 +1107,8 @@
   "DispUserFilterPath": "",
   "RecentRoms": {
     "recentlist": [
-      "*OpenRom*C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\pokemon_red.gb",
       "*OpenRom*C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\BizHawk-1.11.6\\Gameboy\\pokemon_red.gb",
+      "*OpenRom*C:\\Users\\neoga\\Desktop\\GitHub\\PokeBotBad\\pokemon_red.gb",
       "*OpenRom*C:\\Users\\rjrhy\\Desktop\\Pokebot\\Pokemon - Red Version (USA, Europe).gb",
       "*OpenRom*C:\\Users\\rjrhy\\Desktop\\Pokebot\\1986 - Pokemon Emerald (U)(TrashMan).gba",
       "*OpenRom*C:\\Users\\rjrhy\\Desktop\\Pokebot\\Pokemon - Crystal Version (USA, Europe).gbc"
@@ -1357,8 +1357,8 @@
   },
   "CommonToolSettings": {
     "BizHawk.Client.EmuHawk.LuaConsole": {
-      "_wndx": 225,
-      "_wndy": 150,
+      "_wndx": -570,
+      "_wndy": 311,
       "Width": 1189,
       "Height": 706,
       "SaveWindowPosition": true,
