Add proactive crit survival awareness to heal decisions
Calculate Gen 1 crit rates using species base speed and flag
preemptive heals when a critical hit would kill and the crit
probability exceeds a configurable threshold (default 15%).

- Add critRate() and calcCritDamage() to combat engine
- Fix missing critical=true on Razor-Leaf and Crabhammer
- Add baseSpeed to all preset opponents and BASE_SPEED lookup
- Show crit danger percentage in paint overlay during battles
- Configurable via CRIT_SURVIVAL_THRESHOLD (set false to disable)

--- a/LiveSplit_1.6.9/settings.cfg
+++ b/LiveSplit_1.6.9/settings.cfg
@@ -32,5 +32,5 @@
     <Generator name="None">False</Generator>
   </ComparisonGeneratorStates>
   <ActiveAutoSplitters />
-  <TimerDrift><![CDATA[CcyAtAkA8D8=]]></TimerDrift>
+  <TimerDrift><![CDATA[DyBV0Q0A8D8=]]></TimerDrift>
 </Settings>
